# pxyz.runtime

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  MENTAL_MODEL.md  ONTOLOGY.md  README.md
.archive/: Definitive Master Prompt v2 (Final).md  Domain_PRD_Contacts.md  Domain_PRD_Documents.md  Domain_PRD_Email.md  Domain_PRD_Files_Invoices_Wizard.md  Domain_PRD_Notes.md  Domain_PRD_Portal_Notifications_Comms.md  Domain_PRD_Tasks.md  Domain_PRD_Workflows.md  Domain_Stragglers_AI_Tools.md  README.md
.claude/: settings.local.json
docs/: PXYZ_Beginner's_Guide.md  PXYZ_Compiler_&_Runtime.md  PXYZ_Complete_Theory.md  PXYZ_OG.md  PXYZ_Physics.md  Safe_Architecture_for_AI.md  System_Reference_Manual.md  Understanding_PXYZ.md
docs/domain.extraction/: BUSINESS_RAG_EXTRACTION.md  CAG_ENGINE_EXTRACTION.md  CHUNKING_PIPELINE_EXTRACTION.md  CIRCULAR_LOGIC.md  INDEX.md  (+57 more)
main/: ARCHITECTURE_REVIEW.md  Cargo.toml  build.rs  lib.rs  main.rs
main/docs/: ADR-001-graphir-contract.md  CODE_REVIEW_CHECKLIST.md  NDA_READY_SUMMARY.md  RUNTIME_GOLDEN_TESTS.md  WASM_HOST_API.md
main/src/compiler/: bytecode.rs  ir.rs  lower.rs  mod.rs  optimize.rs  pragmatic.rs  semantic.rs  syntactic.rs
main/src/dsl/: ast.rs  mod.rs  parser.rs
main/src/emit/: audit.rs  binary.rs  mermaid.rs  mod.rs  text.rs
main/src/physics/: cache.rs  layout.rs
main/src/runtime/: constraint.rs  host.rs  mod.rs  pxyz.rs  shape.rs
main/tests/: pxyz_golden.rs  pxyz_hypotheses.rs  pxyz_nasa_grade.rs  runtime_golden.rs  test_utils.rs
main/tests/fixtures/: README.md
wasm/: pxyz.wat  pxyz_physics.wat
(+13 files in other folders)
