[package]
name = "pxyz"
version = "0.1.0"
edition = "2021"
description = "PXYZ workflow compiler - XML to graph.bin"

[lib]
path = "lib.rs"

[[bin]]
name = "pxyz"
path = "main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"
anyhow = "1"

# XML parsing
quick-xml = "0.31"

# Serialization (for audit.json + runtime)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling (runtime)
thiserror = "1"

# Binary hashing
sha2 = "0.10"

# Timestamps for audit
chrono = { version = "0.4", features = ["serde"] }

# Physics module - compile-time assertions
static_assertions = "1.1"

[dev-dependencies]
proptest = "1"
